--- a/src/NetBlog/NetBlog.WebApplication/Pages/Index.cshtml
+++ b/src/NetBlog/NetBlog.WebApplication/Pages/Index.cshtml
@@ -5,5 +5,6 @@
 }
 
 <div class="auto cell grid-y">
-    <div><h1>Index</h1></div>
+    @await Component.InvokeAsync("PageHeader", "Elias Navarro on title")
+    <div><h1>Welcome</h1></div>
 </div>
