--- a/src/NetBlog/NetBlog.WebApplication/Pages/Shared/_Layout.cshtml
+++ b/src/NetBlog/NetBlog.WebApplication/Pages/Shared/_Layout.cshtml
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="~/foundation/css/foundation-prototype.min.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/font-awesome/css/font-awesome.min.css" asp-append-version="true" />
     <environment include="Development">
-        <link rel="stylesheet" href="~/css/site.css" />
+        <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     </environment>
     <environment exclude="Development">
         <link rel="stylesheet" href="~/css/site.min.css" asp-append-version="true" />
@@ -17,7 +17,7 @@
 <body>
     <div class="off-canvas-wrapper">
         <div class="off-canvas-wrapper-inner" data-off-canvas-wrapper>
-            <div class="off-canvas position-left" id="offCanvasLeft" data-off-canvas>
+            <div class="off-canvas position-left" id="offCanvasLeft" data-off-canvas data-transition="overlap">
                 <!-- left off-canvas markup -->
                 <button class="close-button" aria-label="Close menu" type="button" data-close>
                     <span aria-hidden="true">&times;</span>
