--- a/src/NetBlog/NetBlog.WebApplication/Pages/Shared/_Menu.cshtml
+++ b/src/NetBlog/NetBlog.WebApplication/Pages/Shared/_Menu.cshtml
@@ -1,24 +1,25 @@
 ﻿<!-- Menu -->
 <ul class="vertical menu accordion-menu show-for-small-only" data-accordion-menu style="margin-top:3rem;">
-    @*<li>
-            <a href="javascript:;"><i class="fa fa-cogs fa-lg" style="padding-right: 1rem;"></i>Clientes</a>
-            <ul class="menu vertical nested is-active">
-                <li><a asp-page="/Customers/Index"><i class="fa fa-list-ul fa-lg" style="padding-right: 1rem;"></i>Listado</a></li>
-                <li><a asp-page="/Customers/Add"><i class="fa fa-plus fa-lg" style="padding-right: 1rem;"></i>Nuevo</a></li>
-            </ul>
-        </li>
-        <li>
-            <a href="javascript:;"><i class="fa fa-database fa-lg" style="padding-right: 1rem;"></i>Catálogos</a>
-            <ul class="menu vertical nested is-active">
-                <li><a asp-page="/Catalogs/Index"><i class="fa fa-list-ul fa-lg" style="padding-right: 1rem;"></i>Listado</a></li>
-                <li><a asp-page="/Catalogs/Add"><i class="fa fa-plus fa-lg" style="padding-right: 1rem;"></i>Nuevo</a></li>
-            </ul>
-        </li>*@
+    <li>
+        <a asp-page="/Index"><i class="fa fa-home fa-lg" style="padding-right: 1rem;"></i>Home</a>
+    </li>
     <li>
         <a asp-page="/Blog/Index"><i class="fa fa-rss fa-lg" style="padding-right: 1rem;"></i>Blog</a>
     </li>
     <li>
         <a asp-page="/WhoIAm"><i class="fa fa-vcard fa-lg" style="padding-right: 1rem;"></i>Who i am</a>
+    </li>
+    <li>
+        <a href="https://www.linkedin.com/in/elias-fernando-navarro-gallegos-60447775/" target="_blank"><i class="fa fa-linkedin fa-lg" style="padding-right: 1rem;"></i>Linkedin</a>
+    </li>
+    <li>
+        <a href="https://www.youracclaim.com/users/elias-navarro" target="_blank"><i class="fa fa-windows fa-lg" style="padding-right: 1rem;"></i>My Certifications</a>
+    </li>
+    <li>
+        <a href="https://twitter.com/ena_1_" target="_blank"><i class="fa fa-twitter fa-lg" style="padding-right: 1rem;"></i>Twitter</a>
+    </li>
+    <li>
+        <a href="https://github.com/ena-mx" target="_blank"><i class="fa fa-github fa-lg" style="padding-right: 1rem;"></i>Github</a>
     </li>
     @*@if (User.Identity.IsAuthenticated)
         {
