--- a/src/NetBlog/NetBlog.WebApplication/wwwroot/css/site.css
+++ b/src/NetBlog/NetBlog.WebApplication/wwwroot/css/site.css
@@ -112,3 +112,15 @@
 .app-tabs-grid {
     height: 100%;
 }
+
+
+.app-profile-image {
+    border: 2px solid #fff;
+    box-shadow: inset 0 1.5px 3px 0 rgba(0,0,0,.15), 0 1.5px 3px 0 rgba(0,0,0,.15);
+    border-radius: 49.9%;
+    width: 72px;
+    height: 72px;
+    box-sizing: border-box;
+    background-clip: content-box;
+    margin-right: 1rem;
+}
