--- a/src/NetBlog/NetBlog.WebApplication/Pages/Components/TitlebarMenu/Default.cshtml
+++ b/src/NetBlog/NetBlog.WebApplication/Pages/Components/TitlebarMenu/Default.cshtml
@@ -1,8 +1,9 @@
 ﻿@model KeyValuePair<string, NetBlog.Queries.Menu.MenuItem[]>
 <div class="title-bar" style="background: #2c3840">
     <div class="title-bar-left">
-        <button class="menu-icon show-for-small-only" type="button" data-toggle="offCanvasLeft"></button>
-        <a class="app-bar-title" asp-page="/Index" style="color: white;">@Model.Key</a>
+        @*<button class="menu-icon show-for-small-only" type="button" data-toggle="offCanvasLeft"></button>*@
+        <button class="menu-icon" type="button" data-toggle="offCanvasLeft"></button>
+        <a class="app-bar-title" data-apploader asp-page="/Index" style="color: white;">@Model.Key</a>
     </div>
     <div class="title-bar-right grid-x align-right hide-for-small-only">
         @for (int i = 0; i < Model.Value.Length; i++)
@@ -10,7 +11,7 @@
             @if (Model.Value[i].IsLocal)
             {
                 <div>
-                    <a asp-page="@Model.Value[i].Url" style="color: white; padding-right: 1rem; font-size: small;"><i class="@Model.Value[i].FontAwasomeIcon"></i>&nbsp;@Model.Value[i].Description</a>
+                    <a data-apploader asp-page="@Model.Value[i].Url" style="color: white; padding-right: 1rem; font-size: small;"><i class="@Model.Value[i].FontAwasomeIcon"></i>&nbsp;@Model.Value[i].Description</a>
                 </div>
             }
             else
@@ -20,14 +21,10 @@
                 </div>
             }
         }
-        @*@if (User.Identity.IsAuthenticated)
+        @if (User.Identity.IsAuthenticated)
         {
             <label style="color: white; padding-right: 1rem;"><i class="fa fa-user fa-lg" style="padding-right: 1rem;"></i>@User.Identity.Name!</label>
-            <a asp-area="" asp-controller="Account" asp-action="SignOut" style="color: white; padding-right: 1rem;"><i class="fa fa-sign-out fa-lg"></i></a>
+            <a data-apploader asp-area="" asp-controller="Account" asp-action="SignOut" style="color: white; padding-right: 1rem;"><i class="fa fa-sign-out fa-lg"></i></a>
         }
-        else
-        {
-            <a asp-area="" asp-controller="Account" asp-action="Signin" style="color: white; padding-right: 1rem;"><i class="fa fa-sign-out fa-lg"></i></a>
-        }*@
     </div>
 </div>
